--- a/primapagina.css
+++ b/primapagina.css
@@ -36,12 +36,7 @@ body,html
 }
 .title{
     text-align: center;
-}
-#border{
-  width: 500px;
-  border: 15px black;
-  border-radius: 50px;
-  padding: 50px;
-  margin: 50px;
-  border-style: groove;
+    font-size: 300px;
+    font-style: oblique;
+    color: black;
 }
