--- a/contact.css
+++ b/contact.css
@@ -13,7 +13,9 @@ body,html
   opacity: 0.5;
   filter: alpha(opacity=50);
 }
-
+.title{
+  font-size: 50px;
+}
 input[type=submit] {
   background-color: #4CAF50;
   color: white;
