--- a/MENU_min-690px.CSS
+++ b/MENU_min-690px.CSS
@@ -3,6 +3,8 @@ body,html{
   margin: 0px;
   background:#EDF7F5;
 }
+
+
 .coperta
 {
   display: inline-block;
@@ -27,7 +29,7 @@ body,html{
    padding-right: 25%;
    margin:0;
    border: 0;
-   background: -webkit-linear-gradient(#FF8984, #204E5F);
+   background: linear-gradient(#FF8984, #204E5F);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
@@ -72,7 +74,8 @@ body,html{
  }
 
  .menu{
-   width: inherit;
+
+   width:100%;
   display:flex;
   background:linear-gradient(to bottom,#FFC6A8 ,#B7D7D8);
   list-style-type:none;
@@ -81,9 +84,8 @@ body,html{
   padding: 0;
   padding-top: 10px;
   padding-bottom: 10px;
-  position: sticky;
-  top: 30px;
-  left: 30px;
+  position: relative;
+  top: 30%;
 }
 
 
@@ -92,6 +94,7 @@ body,html{
   flex: 1;
 }
 li a{
+
   display: inline;
   flex: 1;
   color:white;
@@ -127,6 +130,58 @@ li a:hover{
 .dropdown-content a:hover{background:linear-gradient(to bottom,#204E5F ,#FF8984);}
 .dropdown:hover .dropdown-content{display: block;}
 
+
+.myBtn{
+  overflow: visible;
+  float: center;
+  background-color:linear-gradient( white,#204E5F);
+  border: none;
+  color: black;
+  padding: 1% 1%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 44%;
+  margin-right: 25%;
+}
+.modal {
+
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #f0efef;
+  margin: 15% auto;
+  padding: 20px;
+  border: 2px solid #c2d4dd;
+  width: 80%;
+  text-align: center;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 .textbox{
   background: transparent;
   margin-left:30% ;
