--- a/contact.css
+++ b/contact.css
@@ -16,6 +16,64 @@ body,html
 .title{
   font-size: 50px;
 }
+.menu{
+
+   width:100%;
+  display:flex;
+  background:linear-gradient(to bottom,#FFC6A8 ,#B7D7D8);
+  list-style-type:none;
+  margin: 0;
+  overflow: visible;
+  padding: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: relative;
+  top: 30%;
+}
+
+
+ li{
+  display: flex;
+  flex: 1;
+}
+li a{
+
+  display: inline;
+  flex: 1;
+  color:white;
+  text-align: center;
+  padding: 15px;
+  text-decoration: none;
+  font-style: italic;
+  font-weight: bold;
+  font-size:2em;
+  font-family:fontAwesome;
+  }
+li a:hover{
+  background:linear-gradient(to bottom,#204E5F ,#FF8984);
+}
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background: linear-gradient(to bottom,#FFC6A8,#B7D7D8);
+  min-width: 160px;
+  box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a{
+  color:white;
+  padding: 2px 2px;
+  text-decoration: none;
+  display: block;
+  font-style: italic;
+  font-weight: bold;
+  font-size:2em;
+  font-family:fontAwesome;
+}
+.dropdown-content a:hover{background:linear-gradient(to bottom,#204E5F ,#FF8984);}
+.dropdown:hover .dropdown-content{display: block;}
+
+
 input[type=submit] {
   background-color: #4CAF50;
   color: white;
