--- a/contactmax690.css
+++ b/contactmax690.css
@@ -1,6 +1,6 @@
 body,html
-{ width: 100%;
-  height: 100%;
+{ width: auto;
+  height: auto;
   margin: 0px;
 }
 .coperta
@@ -18,61 +18,61 @@ body,html
 }
 .menu{
 
-   width:100%;
-  display:flex;
+  width:100%;
+  display:block;
   background:linear-gradient(to bottom,#FFC6A8 ,#B7D7D8);
   list-style-type:none;
   margin: 0;
   overflow: visible;
   padding: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
   position: relative;
   top: 30%;
 }
-
-
- li{
+.menu li{
   display: flex;
-  flex: 1;
+  flex:1;
 }
-li a{
 
+
+
+.menu li a{
   display: inline;
-  flex: 1;
-  color:white;
+  flex:1;
   text-align: center;
-  padding: 15px;
+  padding:1%;
+  color:white;
   text-decoration: none;
   font-style: italic;
   font-weight: bold;
   font-size:2em;
   font-family:fontAwesome;
   }
-li a:hover{
+.menu li a:hover{
+
   background:linear-gradient(to bottom,#204E5F ,#FF8984);
 }
 .dropdown-content{
   display: none;
-  position: absolute;
+  position: relative;
   background: linear-gradient(to bottom,#FFC6A8,#B7D7D8);
   min-width: 160px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  padding-top: 1%;
+
 }
 .dropdown-content a{
   color:white;
-  padding: 2px 2px;
+  padding-top: 1%;
   text-decoration: none;
-  display: block;
+  display: inline;
   font-style: italic;
   font-weight: bold;
   font-size:2em;
   font-family:fontAwesome;
 }
 .dropdown-content a:hover{background:linear-gradient(to bottom,#204E5F ,#FF8984);}
-.dropdown:hover .dropdown-content{display: block;}
-
+.dropdown:hover .dropdown-content{display: inline;}
 
 input[type=submit] {
   background-color: #4CAF50;
@@ -109,6 +109,7 @@ input[type=submit]:hover {
 }
 .message {
   position: absolute;
-  top: 25%;
-  left: 40%;
+  top: 60%;
+
+  left: 30%;
 }
