--- a/statistici-max700.css
+++ b/statistici-max700.css
@@ -1,5 +1,5 @@
 body,html
-{ width: 100%;
+{width: 100%;
   height: 100%;
   margin: 0px;
 }
@@ -13,102 +13,91 @@ body,html
   opacity: 0.5;
   filter: alpha(opacity=50);
 }
-.title{
-  font-size: 50px;
-}
 .menu{
 
-   width:100%;
-  display:flex;
+  width:100%;
+  display:block;
   background:linear-gradient(to bottom,#FFC6A8 ,#B7D7D8);
   list-style-type:none;
   margin: 0;
   overflow: visible;
   padding: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
   position: relative;
   top: 30%;
 }
-
-
- li{
+.menu li{
   display: flex;
-  flex: 1;
+  flex:1;
 }
-li a{
 
+
+
+.menu li a{
   display: inline;
-  flex: 1;
-  color:white;
+  flex:1;
   text-align: center;
-  padding: 15px;
+  padding:1%;
+  color:white;
   text-decoration: none;
   font-style: italic;
   font-weight: bold;
   font-size:2em;
   font-family:fontAwesome;
   }
-li a:hover{
+.menu li a:hover{
+
   background:linear-gradient(to bottom,#204E5F ,#FF8984);
 }
 .dropdown-content{
   display: none;
-  position: absolute;
+  position: relative;
   background: linear-gradient(to bottom,#FFC6A8,#B7D7D8);
   min-width: 160px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  padding-top: 1%;
+
 }
 .dropdown-content a{
   color:white;
-  padding: 2px 2px;
+  padding-top: 1%;
   text-decoration: none;
-  display: block;
+  display: inline;
   font-style: italic;
   font-weight: bold;
   font-size:2em;
   font-family:fontAwesome;
 }
 .dropdown-content a:hover{background:linear-gradient(to bottom,#204E5F ,#FF8984);}
-.dropdown:hover .dropdown-content{display: block;}
+.dropdown:hover .dropdown-content{display: inline;}
 
 
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  cursor: pointer;
-  text-align: center;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-.centered {
-  border-radius: 5px;
-  padding: 20px;
-  position: absolute;
-  top: 50%;
+.stat{
+  position:absolute;
+  top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 550%;
 }
-.button {
-  width: 30%;
-  background-color: #4CAF50;
+* {box-sizing: border-box}
+.title{
+  text-align: center;
+}
+.subtitle
+{
+  font-size: 30px;
+}
+.container {
+  width: 100%;
+  background-color: #ddd;
+}
+.Views {
+  text-align: right;
+  padding: 10px;
   color: white;
-  padding: 14px 88px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 12px;
-  cursor: pointer;
-  display: inline;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-.message {
-  position: absolute;
-  top: 25%;
-  left: 40%;
-}
+
+.Femei {width: 65%; background-color: #4CAF50;}
+.Barbati {width: 25%; background-color: #2196F3;}
+.Baietei {width: 5%; background-color: #f44336;}
+.Fetite {width: 5%; background-color: #ADFF2F;}
