--- a/statistici.css
+++ b/statistici.css
@@ -14,8 +14,9 @@ body,html
   filter: alpha(opacity=50);
 }
 .menu{
-
-   width:100%;
+  position: absolute;
+  height:auto;
+  width:100%;
   display:flex;
   background:linear-gradient(to bottom,#FFC6A8 ,#B7D7D8);
   list-style-type:none;
@@ -76,7 +77,7 @@ li a:hover{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 300px;
+  font-size: 1000%;
 }
 * {box-sizing: border-box}
 .title{
