--- a/MENU_max-690px.css
+++ b/MENU_max-690px.css
@@ -36,7 +36,7 @@ body,html{
  }
  .centru img {
    background:	transparent;
-  max-width: 100%;
+  width:100%;
   height: 100%;
  background-position: top;
  background-repeat: no-repeat;
@@ -64,26 +64,30 @@ body,html{
 
  }
 
- .menu{
+ .navbar1{
+  width: 100%;
+}
+.menu{
 
    width:100%;
-  display:inline-block;
+  display:block;
   background:linear-gradient(to bottom,#FFC6A8 ,#B7D7D8);
   list-style-type:none;
   margin: 0;
   overflow: visible;
   padding: 0;
-  padding-top: 1%;
-  padding-bottom: 1%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: relative;
   top: 30%;
 }
 
 
- li{
+.menu li{
   display: flex;
   flex: 1;
 }
-li a{
+.menu li a{
 
   display: inline;
   flex: 1;
@@ -96,12 +100,13 @@ li a{
   font-size:2em;
   font-family:fontAwesome;
   }
-li a:hover{
+.menu li a:hover{
   background:linear-gradient(to bottom,#204E5F ,#FF8984);
 }
 .dropdown-content{
   display: none;
-  position: absolute;
+  padding-top: 1%;
+  position: relative;
   background: linear-gradient(to bottom,#FFC6A8,#B7D7D8);
   min-width: 160px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
@@ -109,19 +114,20 @@ li a:hover{
 }
 .dropdown-content a{
   color:white;
-  padding: 2px 2px;
+padding-top: 1%;
   text-decoration: none;
-  display: block;
+  display:inline;
   font-style: italic;
   font-weight: bold;
   font-size:2em;
   font-family:fontAwesome;
 }
 .dropdown-content a:hover{background:linear-gradient(to bottom,#204E5F ,#FF8984);}
-.dropdown:hover .dropdown-content{display: block;}
+.dropdown:hover .dropdown-content{display: inline;}
 
 
 .myBtn{
+  border-radius:20%;
   overflow: visible;
   float: center;
   background-color:linear-gradient( white,#204E5F);
@@ -136,18 +142,18 @@ li a:hover{
 }
 .modal {
 
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
+
 .modal-content {
   background-color: #f0efef;
   margin: 15% auto;
@@ -157,7 +163,7 @@ li a:hover{
   text-align: center;
 }
 
-/* The Close Button */
+
 .close {
   color: #aaa;
   float: right;
@@ -170,6 +176,18 @@ li a:hover{
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+.bt{
+  background-color: #008CBA;
+ border: none;
+ color: white;
+ padding: 15px 32px;
+ text-align: center;
+ text-decoration: none;
+ font-size: 16px;
+ margin: 4px 2px;
+ cursor: progress;
+ border-radius: 12px;
 }
 .textbox{
   background: transparent;
@@ -187,6 +205,7 @@ li a:hover{
   text-align: justify;
 }
 .textbox h1{
+	color:#262626;
   text-align: center;
   text-decoration: overline;
   overflow: visible;
