--- a/MENU_min-690px.CSS
+++ b/MENU_min-690px.CSS
@@ -131,7 +131,9 @@ li a:hover{
 .dropdown:hover .dropdown-content{display: block;}
 
 
+
 .myBtn{
+  border-radius:20%;
   overflow: visible;
   float: center;
   background-color:linear-gradient( white,#204E5F);
@@ -147,18 +149,18 @@ li a:hover{
 }
 .modal {
 
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
+
 .modal-content {
   background-color: #f0efef;
   margin: 15% auto;
@@ -168,7 +170,7 @@ li a:hover{
   text-align: center;
 }
 
-/* The Close Button */
+
 .close {
   color: #aaa;
   float: right;
@@ -181,6 +183,18 @@ li a:hover{
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+.bt{
+  background-color: #008CBA;
+ border: none;
+ color: white;
+ padding: 15px 32px;
+ text-align: center;
+ text-decoration: none;
+ font-size: 16px;
+ margin: 4px 2px;
+ cursor: progress;
+ border-radius: 12px;
 }
 .textbox{
   background: transparent;
@@ -198,6 +212,7 @@ li a:hover{
   text-align: justify;
 }
 .textbox h1{
+	color:#262626;
   text-align: center;
   text-decoration: overline;
   overflow: visible;
