--- a/barbat-max700px.css
+++ b/barbat-max700px.css
@@ -1,34 +1,40 @@
-body , html{
-  height: auto;
-  width: auto;
+body,html{
+  height: 100%;
   margin: 0px;
-  background-color:	#c5ebff;
+  background-color:	#D7FFCD;
+  background-image:radial-gradient( #FFC6A8, #FFE4E1, #033076);
+  width: 100%;
+}
+.navbar1{
+  width:auto;
 }
 .menu{
 
-  width:100%;
+   width:100%;
   display:block;
-  background:linear-gradient(to bottom,#FFC6A8 ,#B7D7D8);
+  background:linear-gradient(to bottom right,#033076, #FFE4E1, #FFC6A8,#033076);
   list-style-type:none;
   margin: 0;
   overflow: visible;
   padding: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
   position: relative;
   top: 30%;
 }
+
+
 .menu li{
   display: flex;
-  flex:1;
+  flex: 1;
 }
-
-
-
 .menu li a{
+
   display: inline;
-  flex:1;
+  flex: 1;
+  color:#001754;
   text-align: center;
-  padding:1%;
-  color:white;
+  padding: 15px;
   text-decoration: none;
   font-style: italic;
   font-weight: bold;
@@ -36,18 +42,16 @@ body , html{
   font-family:fontAwesome;
   }
 .menu li a:hover{
-
-  background:linear-gradient(to bottom,#204E5F ,#FF8984);
+  background:linear-gradient(to bottom,#F0D3D1 ,#00144A);
 }
 .dropdown-content{
   display: none;
+  padding-top: 1%;
   position: relative;
-  background: linear-gradient(to bottom,#FFC6A8,#B7D7D8);
+  background: linear-gradient(to bottom right,#033076, #FFE4E1, #FFC6A8,#033076);
   min-width: 160px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  padding-top: 1%;
-
 }
 .dropdown-content a{
   color:white;
@@ -59,30 +63,20 @@ body , html{
   font-size:2em;
   font-family:fontAwesome;
 }
-.dropdown-content a:hover{background:linear-gradient(to bottom,#204E5F ,#FF8984);}
+.dropdown-content a:hover{background:linear-gradient(to bottom,#F0D3D1 ,#00144A);}
 .dropdown:hover .dropdown-content{display: inline;}
 
-
-.text-block p {
-  position: right;
-  bottom: 50px;
+.Flex {
+  text-align: center;
+  font-size: 30px;
+  float: center;
   color: black;
-  font-size: 300%;
+  font-size: 200%;
   font-style: italic;
-  padding-left: 0;
+  padding-right: 0;
   margin: 0;
   border: 0;
 display: inline;
-}
-.main{
-  height: auto;
-  width: auto;
-}
-.Flex img{
-  margin-left: 10%;
-  width:300px;
-  align-items: center;
-  height:300px;
 }
 
 .rezphoto{
@@ -95,25 +89,29 @@ display: inline;
   overflow: scroll;
   display: flex;
   list-style-type: none;
-  width:auto;
 }
  .pas1 li{
-   margin-right: 1%;
-   margin-left: 1%;
-   float: right;
+   margin-right: 8px;
+   float: left;
    position:static;
- }
+}
  .pas1 li:hover{
    opacity: 0.6;
 }
-
+.pozaCo{
+  float: center;width: 100%;
+  height: 15%;
+  width: 100%;
+}
 .dr{
-  float:left;
+  float:right;
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 10%;
 }
-.Text{
+.main{
   text-align: center;
-  font-size: 30px;
+  text-decoration-style:wavy;
+  font-style: italic;
+  font-size: large;
 }
