--- a/barbati-min700px.css
+++ b/barbati-min700px.css
@@ -1,14 +1,15 @@
 body , html{
-  height: auto;
-  width: auto;
+  height: 100%;
   margin: 0px;
-  background-color:	#c5ebff;
+  background-color:	#B2D9D6;
+ background-image:radial-gradient( #FFC6A8, #FFE4E1, #033076);
+
 }
 .menu{
 
   width:inherit;
   display:flex;
-  background:linear-gradient(to bottom,#FFC6A8 ,#B7D7D8);
+  background:linear-gradient(to bottom right,#033076, #FFE4E1, #FFC6A8,#033076);
   list-style-type:none;
   margin: 0;
   overflow: visible;
@@ -28,7 +29,7 @@ body , html{
 
   display: inline;
   flex: 1;
-  color:white;
+  color:#001754;
   text-align: center;
   padding: 15px;
   text-decoration: none;
@@ -38,13 +39,13 @@ body , html{
   font-family:fontAwesome;
   }
 .menu li a:hover{
-  background:linear-gradient(to bottom,#204E5F ,#FF8984);
+  background:linear-gradient(to bottom,#F0D3D1 ,#00144A);
 }
 .dropdown-content{
   padding-top: 1%;
   display: none;
   position: absolute;
-  background: linear-gradient(to bottom,#FFC6A8,#B7D7D8);
+  background: linear-gradient(to bottom right,#033076, #FFE4E1, #FFC6A8,#033076);
   min-width: 160px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -59,30 +60,26 @@ body , html{
   font-size:2em;
   font-family:fontAwesome;
 }
-.dropdown-content a:hover{background:linear-gradient(to bottom,#204E5F ,#FF8984);}
+.dropdown-content a:hover{background:linear-gradient(to bottom,#F0D3D1 ,#00144A);}
 .dropdown:hover .dropdown-content{display: block;}
 
 
-.text-block p {
-  position: right;
-  bottom: 50px;
+.Flex {
+  text-align: center;
+  font-size: 30px;
+  float: center;
   color: black;
   font-size: 300%;
   font-style: italic;
-  padding-left: 0;
+  padding-right: 0;
   margin: 0;
   border: 0;
 display: inline;
 }
-.main{
-  height: auto;
-  width: auto;
-}
-.Flex img{
-  width: 50%;
-  align-items: center;
-  padding-left: 25%;
-  height: 90%;
+.pozaCo{
+  float: right;
+  width: 100%;
+  height: 60%;
 }
 
 .rezphoto{
@@ -106,19 +103,17 @@ display: inline;
  .pas1 li:hover{
    opacity: 0.6;
 }
-.pozaCo{
-  float: right;
-}
+
 .dr{
   float:left;
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 10%;
 }
-.Text{
+
+.main{
   text-align: center;
-  font-size: 30px;
-}
-.Flex{
-  display: flex;
+  text-decoration-style:wavy;
+  font-style: italic;
+  font-size: large;
 }
