--- a/womenpagemax.css
+++ b/womenpagemax.css
@@ -1,22 +1,26 @@
 body,html{
   height: 100%;
   margin: 0px;
-  background-color:	#FFDBC1;
+  background-color:	#FFE4E1;
   background-image: radial-gradient( #FFC6A8, #F78782, #FFDBC1);
+  width: 100%;
 }
-
+.navbar1{
+  width:auto;
+}
 .menu{
 
    width:100%;
-  display:flex;
+  display:block;
   background:linear-gradient(to bottom right,#9E4753, #FFE4E1, #FFC6A8,#9E4753);
   list-style-type:none;
   margin: 0;
   overflow: visible;
   padding: 0;
   padding-top: 10px;
+  padding-bottom: 10px;
   position: relative;
-
+  top: 30%;
 }
 
 
@@ -41,33 +45,33 @@ body,html{
   background:linear-gradient(to bottom,#FCCAD1 ,#AB4D5A);
 }
 .dropdown-content{
-  padding-top: 1%;
   display: none;
-  position: absolute;
-  background:linear-gradient(to bottom right,#9E4753, #FFE4E1, #FFC6A8,#9E4753);
+  padding-top: 1%;
+  position: relative;
+  background: linear-gradient(to bottom right,#9E4753, #FFE4E1, #FFC6A8,#9E4753);
   min-width: 160px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 .dropdown-content a{
   color:white;
-  padding: 2px 2px;
+  padding-top: 1%;
   text-decoration: none;
-  display: block;
+  display: inline;
   font-style: italic;
   font-weight: bold;
   font-size:2em;
   font-family:fontAwesome;
 }
 .dropdown-content a:hover{background:linear-gradient(to bottom,#FCCAD1 ,#AB4D5A);}
-.dropdown:hover .dropdown-content{display: block;}
+.dropdown:hover .dropdown-content{display: inline;}
 
-.Flex  {
+.Flex {
   text-align: center;
   font-size: 30px;
   float: center;
   color: black;
-  font-size: 300%;
+  font-size: 200%;
   font-style: italic;
   padding-right: 0;
   margin: 0;
@@ -75,11 +79,6 @@ body,html{
 display: inline;
 }
 
-.pozaCo{
-  float: left;
-  width: 100%;
-  height: 60%;
-}
 .rezphoto{
   height: 200px;
   width: 238px;
@@ -87,12 +86,11 @@ display: inline;
   font-size: em;
 }
 .pas1{
-   overflow: scroll;
+  overflow: scroll;
   display: flex;
   list-style-type: none;
 }
  .pas1 li{
-
    margin-right: 8px;
    float: left;
    position:static;
@@ -101,12 +99,12 @@ display: inline;
    opacity: 0.6;
 }
 .pozaCo{
-  float: left;
+  float: center;width: 100%;
+  height: 15%;
   width: 100%;
-  height: 60%;
 }
 .dr{
-  float:center;
+  float:right;
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 10%;
