--- a/pagina2-max.css
+++ b/pagina2-max.css
@@ -45,7 +45,7 @@ html,body{
 .dropdown-content{
   display: none;
   padding-top: 1%;
-  position: absolute;
+  position: relative;
   background: linear-gradient(to bottom,#FFC6A8,#B7D7D8);
   min-width: 160px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
@@ -58,7 +58,7 @@ padding-top: 1%;
   display:inline;
   font-style: italic;
   font-weight: bold;
-  font-size:3em;
+  font-size:2em;
   font-family:fontAwesome;
 }
 .dropdown-content a:hover{background:linear-gradient(to bottom,#204E5F ,#FF8984);}
@@ -131,20 +131,36 @@ left: 7px;
 .Lista{
   float: left;
 }
+
 .Imagine{
   margin-left: 20px;
   float: left;
 }
 .Descriere{
-  margin-left: 20px;
+  margin-left:20px;
   float: left;
 }
 .Link-uri{
+  flex:1;
+  margin-right: 20%;
+          }
+
+.link{
+  padding-top: 10%;
   margin-left: 20px;
   float:left;
-margin-bottom: 20%;
+    margin-right: 20%;
 
 }
+.stelute{
+  margin-left: 20%;
+  flex:1;
+  margin-top: 10%;
+}
+.checked {
+  color: orange;
+  display: inline;}
+
 .Recomandare{
   margin-top: 15px;
 
