--- a/pagmax690.css
+++ b/pagmax690.css
@@ -2,13 +2,15 @@ body,html{
   height: 100%;
   margin: 0px;
   background-color:	#FFE4E1;
-  background-image: radial-gradient( #FFC6A8, #FFE4E1, #A52E56);
+    background-image: radial-gradient( #FFC6A8, #FFE4E1, #A52E56);
 }
-
+.navbar1{
+  width:100%;
+}
 .menu{
 
    width:100%;
-  display:flex;
+  display:block;
   background:linear-gradient(to bottom right,#A52E56, #FFE4E1, #FFC6A8,#A52E56);
   list-style-type:none;
   margin: 0;
@@ -43,33 +45,32 @@ body,html{
 }
 .dropdown-content{
   display: none;
-  padding-top:1%;
-  position: absolute;
-  background: linear-gradient(to bottom right,#A52E56, #FFE4E1, #FFC6A8,#A52E56);
+  padding-top: 1%;
+  position: relative;
+  background:  linear-gradient(to bottom right,#A52E56, #FFE4E1, #FFC6A8,#A52E56);
   min-width: 160px;
- box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 .dropdown-content a{
   color:white;
-  padding: 2px 2px;
+  padding-top: 1%;
   text-decoration: none;
-  display: block;
+  display: inline;
   font-style: italic;
   font-weight: bold;
   font-size:2em;
   font-family:fontAwesome;
 }
-.dropdown-content a:hover{
-  background:linear-gradient(to bottom,#FFBBBB ,#621844);}
-.dropdown:hover .dropdown-content{display: block;}
+.dropdown-content a:hover{background:linear-gradient(to bottom,#FFBBBB ,#621844);}
+.dropdown:hover .dropdown-content{display: inline;}
 
 .Flex {
   text-align: center;
   font-size: 30px;
   float: center;
   color: black;
-  font-size: 300%;
+  font-size: 200%;
   font-style: italic;
   padding-right: 0;
   margin: 0;
@@ -98,7 +99,7 @@ display: inline;
 }
 .pozaCo{
   float: center;width: 100%;
-  height: 40%;
+  height: 15%;
   width: 100%;
 }
 .dr{
