--- a/womenpage.css
+++ b/womenpage.css
@@ -13,8 +13,6 @@ body,html{
   list-style-type:none;
   margin: 0;
   overflow: visible;
-  padding: 0;
-  padding-top: 10px;
   position: relative;
 
 }
@@ -31,6 +29,7 @@ body,html{
   color:#9C4049;
   text-align: center;
   padding: 15px;
+   padding-left:0px;
   text-decoration: none;
   font-style: italic;
   font-weight: bold;
