--- a/womenpagemax.css
+++ b/womenpagemax.css
@@ -16,9 +16,6 @@ body,html{
   list-style-type:none;
   margin: 0;
   overflow: visible;
-  padding: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
   position: relative;
   top: 30%;
 }
@@ -35,6 +32,7 @@ body,html{
   color:#9C4049;
   text-align: center;
   padding: 15px;
+  padding-left:0px;
   text-decoration: none;
   font-style: italic;
   font-weight: bold;
