--- a/barbat-max700px.css
+++ b/barbat-max700px.css
@@ -66,7 +66,6 @@ body,html{
 .Flex {
   text-align: center;
   font-size: 30px;
-  float: center;
   color: black;
   font-size: 200%;
   font-style: italic;
@@ -80,7 +79,6 @@ display: inline;
   height: 200px;
   width: 238px;
   text-align: center;
-  font-size: em;
 }
 .pas1{
   overflow: scroll;
@@ -96,7 +94,7 @@ display: inline;
    opacity: 0.6;
 }
 .pozaCo{
-  float: center;width: 100%;
+  width: 100%;
   height: 15%;
   width: 100%;
 }
