--- a/pag.css
+++ b/pag.css
@@ -65,7 +65,6 @@ body,html{
 .Flex {
   text-align: center;
   font-size: 30px;
-  float: center;
   color: black;
   font-size: 300%;
   font-style: italic;
@@ -79,7 +78,6 @@ display: inline;
   height: 200px;
   width: 238px;
   text-align: center;
-  font-size: em;
 }
 .pas1{
   overflow: scroll;
@@ -95,7 +93,7 @@ display: inline;
    opacity: 0.6;
 }
 .pozaCo{
-  float: center;width: 100%;
+  width: 100%;
   height: 40%;
   width: 100%;
 }
