--- a/paginalogare.css
+++ b/paginalogare.css
@@ -14,7 +14,7 @@ body,html
   filter: alpha(opacity=50);
 }
 input[type=text] {
-  margin: 0,30%,0,30%;
+  margin: 0 30% 0 30%;
   padding: 14px 20px;
   margin: 8px 0;
   display: block;
@@ -32,7 +32,7 @@ input[type=text] {
   transform: translate(-50%, -50%);
 }
 .button {
-  margin:0,50%,0,50%;
+  margin:0 50% 0 50%;
   background-color: #4CAF50;
   color: white;
   padding: 14px 88px;
