--- a/primapagina.css
+++ b/primapagina.css
@@ -22,7 +22,7 @@ body,html
   transform: translate(-50%, -50%);
 }
 .button {
-  margin:0,50%,0,50%;
+  margin:0 50% 0 50%;
   background-color: #4CAF50;
   color: white;
   padding: 14px 88px;
