--- a/womenpagemax.css
+++ b/womenpagemax.css
@@ -67,7 +67,6 @@ body,html{
 .Flex {
   text-align: center;
   font-size: 30px;
-  float: center;
   color: black;
   font-size: 200%;
   font-style: italic;
@@ -81,7 +80,6 @@ display: inline;
   height: 200px;
   width: 238px;
   text-align: center;
-  font-size: em;
 }
 .pas1{
   overflow: scroll;
@@ -97,7 +95,7 @@ display: inline;
    opacity: 0.6;
 }
 .pozaCo{
-  float: center;width: 100%;
+  width: 100%;
   height: 15%;
   width: 100%;
 }
